--- a/alpine/Dockerfile
+++ b/alpine/Dockerfile
@@ -11,14 +11,14 @@ MAINTAINER vkill <vkill.net@gmail.com>
 #
 ARG APISIX_VERSION=v0.5
 ENV APISIX_VERSION=${APISIX_VERSION}
-ARG APISIX_GITHUB_REPO=https://github.com/apisix/apisix
+ARG APISIX_GITHUB_REPO=https://github.com/iresty/apisix
 ENV APISIX_DOWNLOAD_URL ${APISIX_GITHUB_REPO}/archive/${APISIX_VERSION}.zip
 ARG APISIX_DOWNLOAD_SHA256=e6f14dcd58c5ba286ee48f8482a669893560bc2fbc90d6bf52881493ce720fb7
 ENV APISIX_DOWNLOAD_SHA256=${APISIX_DOWNLOAD_SHA256}
 
 RUN set -ex \
   \
-  && sed -i 's!dl-cdn.alpinelinux.org!mirrors.aliyun.com!' /etc/apk/repositories \
+  # && sed -i 's!dl-cdn.alpinelinux.org!mirrors.aliyun.com!' /etc/apk/repositories \
   \
   && apk add --no-cache --virtual .rundeps \
     curl \
